Add changes in next changelogs

--- a/changelogs/0.0.5.md
+++ b/changelogs/0.0.5.md
@@ -3,3 +3,8 @@ Released ..th April 2024.
 
 ## General
 Rename `Equation` to `Expression`
+
+## Add
+- `Equation` class
+  - `isGood(value) -> bool`: returns if unknow value can be replaced by `value` and the equation is good
+  - `find() -> float`: returns the unknown value for the equation to be good
