--- a/changelogs/0.0.5.md
+++ b/changelogs/0.0.5.md
@@ -1,5 +1,5 @@
 # v0.0.5
-Released ..th April 2024.
+Released ..th ... 2024.
 
 ## General
 Rename `Equation` to `Expression`
@@ -8,3 +8,23 @@ Rename `Equation` to `Expression`
 - `Equation` class
   - `isGood(value) -> bool`: returns if unknow value can be replaced by `value` and the equation is good
   - `find() -> float`: returns the unknown value for the equation to be good
+- `isNumber`: function to know if str is number. Exemple:<br>
+  ```
+  isNumber("276") -> True
+  isNumber("3.8") -> True
+  isNumber("276x") -> False
+  ```
+- `Sequances`
+  - `Sequances` class now extends `Function` class
+  - `reason`: to know reason of sequance if it's arithmetic or geometric
+
+## Fix
+- `Function`
+  - fix bug for function of type `x2`
+- `Sequances`
+  - `variation`
+
+
+## Optimisation
+- `Sequances`
+  - `variation`
