Fix bugs + modifications

--- a/changelogs/0.0.5.md
+++ b/changelogs/0.0.5.md
@@ -17,6 +17,8 @@ Rename `Equation` to `Expression`
 - `Sequances`
   - `Sequances` class now extends `Function` class
   - `reason`: to know reason of sequance if it's arithmetic or geometric
+  - replace `arithmeticSum` and `geometricSum` by `sum`
+  - `infLimit` now return float instead of float or string
 
 ## Fix
 - `Function`
