--- a/changelogs/0.0.5.md
+++ b/changelogs/0.0.5.md
@@ -2,10 +2,11 @@
 Released ..th ... 2024.
 
 ## General
-Rename `Equation` to `Expression`
+Rename `Equation` to `Expression`<br>
+Rename `Function` to `UnknowExpression`
 
 ## Add
-- `Equation` class
+- `Equation` class taht extends `UnknowExpression`
   - `isGood(value) -> bool`: returns if unknow value can be replaced by `value` and the equation is good
   - `find() -> float`: returns the unknown value for the equation to be good
 - `isNumber`: function to know if str is number. Exemple:<br>
@@ -15,7 +16,7 @@ Rename `Equation` to `Expression`
   isNumber("276x") -> False
   ```
 - `Sequances`
-  - `Sequances` class now extends `Function` class
+  - `Sequances` class now extends `UnknowExpression` class
   - `reason`: to know reason of sequance if it's arithmetic or geometric
   - replace `arithmeticSum` and `geometricSum` by `sum`
   - `infLimit` now return float instead of float or string
