--- a/changelogs/0.0.5.md
+++ b/changelogs/0.0.5.md
@@ -4,9 +4,10 @@ Released ..th ... 2024.
 ## General
 Rename `Equation` to `Expression`<br>
 Rename `Function` to `UnknowExpression`
+`Sum` and `Prod` now extends `UnknowExpression`
 
 ## Add
-- `Equation` class taht extends `UnknowExpression`
+- `Equation` class that extends `UnknowExpression`
   - `isGood(value) -> bool`: returns if unknow value can be replaced by `value` and the equation is good
   - `find() -> float`: returns the unknown value for the equation to be good
 - `isNumber`: function to know if str is number. Exemple:<br>
