--- a/changelogs/0.0.5.md
+++ b/changelogs/0.0.5.md
@@ -8,6 +8,7 @@ Rename `Function` to `UnknowExpression`
 
 ## Add
 - `Equation` class that extends `UnknowExpression`
+  - now support all comparators (`<=`, `>=`, `<`, `>`, `=`)
   - `isGood(value) -> bool`: returns if unknow value can be replaced by `value` and the equation is good
   - `find() -> float`: returns the unknown value for the equation to be good
 - `isNumber`: function to know if str is number. Exemple:<br>
