Add modifications in changelog

--- a/changelogs/0.0.5.md
+++ b/changelogs/0.0.5.md
@@ -31,5 +31,7 @@ Rename `Function` to `UnknowExpression`
 
 
 ## Optimisation
+- `Expression`
+  - `__init__` is faster
 - `Sequances`
   - `variation`
