Optimisation + refactoring + remove tests

--- a/changelogs/0.0.5.md
+++ b/changelogs/0.0.5.md
@@ -32,6 +32,7 @@ Rename `Function` to `UnknowExpression`
 
 ## Optimisation
 - `Expression`
-  - `__init__` is faster
+  - `__toProgramRedeable__` is faster
+  - `__resolve__` for factorial is faster
 - `Sequances`
   - `variation`
