Optimisation + fix bug with decimal.Overflow

--- a/changelogs/0.0.5.md
+++ b/changelogs/0.0.5.md
@@ -7,6 +7,7 @@ Rename `Function` to `UnknowExpression`
 `Sum` and `Prod` now extends `UnknowExpression`
 
 ## Add
+- add `factorial` function that return higher number that math.factorial 
 - `Equation` class that extends `UnknowExpression`
   - now support all comparators (`<=`, `>=`, `<`, `>`, `=`)
   - `isGood(value) -> bool`: returns if unknow value can be replaced by `value` and the equation is good
