--- a/changelogs/0.0.5.md
+++ b/changelogs/0.0.5.md
@@ -3,16 +3,17 @@ Released ..th ... 2024.
 
 ## General
 Rename `Equation` to `Expression`<br>
-Rename `Function` to `UnknowExpression`
-`Sum` and `Prod` now extends `UnknowExpression`
+Rename `Function` to `UnknowExpression`<br>
+`Sum` and `Prod` now extends `UnknowExpression`<br>
+`Expression::result` now return `decimal.Decimal` instead of `float`
 
 ## Add
-- add `factorial` function that return higher number that math.factorial 
+- add `factorial` function that return higher number that `math.factorial `
 - `Equation` class that extends `UnknowExpression`
   - now support all comparators (`<=`, `>=`, `<`, `>`, `=`)
   - `isGood(value) -> bool`: returns if unknow value can be replaced by `value` and the equation is good
   - `find() -> float`: returns the unknown value for the equation to be good
-- `isNumber`: function to know if str is number. Exemple:<br>
+- `isNumber() -> bool`: function to know if str is number. Exemple:<br>
   ```
   isNumber("276") -> True
   isNumber("3.8") -> True
@@ -33,7 +34,7 @@ Rename `Function` to `UnknowExpression`
 
 ## Optimisation
 - `Expression`
-  - `__toProgramRedeable__` is faster
-  - `__resolve__` for factorial is faster
+  - `__toProgramRedeable__` is faster (so `__init__` too)
+  - `__resolve__` for factorial is faster (so `result` too)
 - `Sequances`
   - `variation`
