Expression now accept E

--- a/changelogs/0.0.5.md
+++ b/changelogs/0.0.5.md
@@ -8,7 +8,8 @@ Rename `Function` to `UnknowExpression`<br>
 `Expression::result` now return `decimal.Decimal` instead of `float`
 
 ## Add
-- add `factorial` function that return higher number that `math.factorial `
+- add `factorial` function that return higher number that `math.factorial`
+- `Expression::result` now accept `E`
 - `Equation` class that extends `UnknowExpression`
   - now support all comparators (`<=`, `>=`, `<`, `>`, `=`)
   - `isGood(value) -> bool`: returns if unknow value can be replaced by `value` and the equation is good
